contact title pointer event, prevent block link on small screen

--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -48,6 +48,7 @@
   font-weight: 400;
   font-size: 128px;
   text-transform: uppercase;
+  pointer-events: none;
 
   >span {
     padding-right: 0.68em;
